@@ -22,12 +22,14 @@ my $builder = Module::Build->new(
         'Test::More' => 0,
         'Test::Differences' => 0,
         'File::Slurp' => 9999.06,
+        'Exporter::Easy' => 0,
     },
     requires => {
         perl => '5.10.0',
         autodie => 0,
         'Taint::Util' => 0,
         'File::Slurp' => 0,
+        'Exporter::Easy' => 0,
         #'ABC'              => 1.6,
         #'Foo::Bar::Module' => 5.0401,
     },
