@@ -4,6 +4,8 @@ Revision history for Run-Parts
 
         New method concat.
 
+        New helper module Run::Parts::Common.
+
         Run::Parts::Perl now works properly on DOS-ish platforms
 
 0.03    Fri Jul  5 21:01:59 CEST 2013
